<resources>
    <string name="delete">Delete</string>
    <string name="Apr">Apr</string>
    <string name="alert_sounds">Alarm Sounds</string>
    <string name="invitation_sent">Invitation Sent!</string>
    <string name="agp_reports">AGP Reports</string>
    <string name="email_address">Email Address</string>
    <string name="connect_a_new_device">Connect a New Device</string>
    <string name="coefficient_of_variation">Coefficient of Variation</string>
    <string name="mol_unit">mmol/L</string>
    <string name="minutes">Minutes</string>
    <string name="about_us">About Us</string>
    <string name="alert_settings">Alarm Settings</string>
    <string name="overlay">Compare</string>
    <string name="type_here">Type Here</string>
    <string name="device_exception">Device Exception</string>
    <string name="select_two_or_more_dates_to_compare">Select two or more dates to compare.</string>
    <string name="sound">Sound</string>
    <string name="expired">Expired</string>
    <string name="code">Code</string>
    <string name="sun_of_week">Sun</string>
    <string name="end_time">End Time</string>
    <string name="launcher_get_stated_now">Register Now</string>
    <string name="bsmonitoring_meal_clock_in">Meal</string>
    <string name="login_code_code_has_been_sent">A temporary code has been sent to your email, please check.</string>
    <string name="dailytrendchart_control_target">Suggested Target %1$s</string>
    <string name="login_enter_password_again">Confirm Password</string>
    <string name="personalcenter_remote_monitoring_tips">Want to be informed of someone\'s glucose levels? Ask him/her to share his/her glucose information with you so that you can follow him/her.</string>
    <string name="Sep">Sep</string>
    <string name="personalcenter_stop_sharing">Stop Sharing</string>
    <string name="bsmonitoring_take_medicine_type_tips">What type of medicine did you take?</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="common_loading">Loading</string>
    <string name="bsmonitoring_manual_connect_sensor">Sorry, the device is not functional. Please remove it.</string>
    <string name="Days">Days</string>
    <string name="personalcenter_voice_vibrator">Vibration &amp; Sound</string>
    <string name="Selected">Selected</string>
    <string name="scan_connect_sensor_code">Scan the code to connect</string>
    <string name="Jul">Jul</string>
    <string name="dailybs_thu">Thu</string>
    <string name="Jun">Jun</string>
    <string name="personalcenter_account_remove_tip">Once the account is deleted, all data in the account will be deleted and cannot be recovered. Do you want to continue?</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="personalcenter_blood_glucose_data">Data from Device</string>
    <string name="bsmonitoring_sensor_not_connect_please_check">Signal Loss</string>
    <string name="incorrect_verification_code">Incorrect Verification Code</string>
    <string name="personalcenter_look_data">More Data</string>
    <string name="dailytrendchart_average_glucose_level">Average Glucose</string>
    <string name="common_medicine">Medicine</string>
    <string name="common_sleep">Sleep</string>
    <string name="CV">CV</string>
    <string name="login_sibionics">Register</string>
    <string name="bsmonitoring_sensor_reconnect">Searching</string>
    <string name="personalcenter_active_follower">Active Follower</string>
    <string name="personalcenter_cancel_monitoring_tips">Confirm to cancel monitoring? Once cancelled, you will be unable to view his/her glucose information.</string>
    <string name="personalcenter_enter_nickname_hint">Enter your nickname here.</string>
    <string name="personalcenter_pending_application">Pending Invitation</string>
    <string name="login_in">Sign In</string>
    <string name="personalcenter_my_sensor">Devices</string>
    <string name="bsmonitoring_normal">Glucose in Range</string>
    <string name="personalcenter_stop_sharing_tips">Are you sure to stop sharing with this follower? Once stopped, he/she will not be able to follow you.</string>
    <string name="common_use_agreement">Terms of Use</string>
    <string name="personalcenter_bs_target_range_setting">Your Target</string>
    <string name="Aug">Aug</string>
    <string name="personalcenter_app_version">Version</string>
    <string name="personalcenter_select_country_search">Search</string>
    <string name="bsmonitoring_connect_sensor_again">Try Again</string>
    <string name="personalcenter_input_diabete_tips">Please select your type of diabetes.</string>
    <string name="dailybs_tue">Tue</string>
    <string name="dailytrendchart_all_select">Select All</string>
    <string name="bsmonitoring_amount">Amount</string>
    <string name="personalcenter_invitation_sent_tips">Your invitation email has been sent. When your invitation is accepted, all your glucose data will be shared with him/her.</string>
    <string name="personalcenter_usename">Nickname</string>
    <string name="dailybs_daily_bs">Daily Reports</string>
    <string name="personalcenter_using">In Use</string>
    <string name="personalcenter_account_hint">Enter Verification Code</string>
    <string name="dailybs_bs_curve">Daily Trending</string>
    <string name="login_select_and_agree_agreement">Tick the box to agree to the User Agreement and Privacy Policy.</string>
    <string name="login_pwd_different">Please confirm your password.</string>
    <string name="Nov">Nov</string>
    <string name="launcher_bs_monitoring_system">Continuous Glucose Monitoring System</string>
    <string name="bsmonitoring_success">Succeeded</string>
    <string name="device_expired">Device Expired</string>
    <string name="personalcenter_bs_remote_view">Remote View</string>
    <string name="login_get_verification_get_code_hint">Get Code</string>
    <string name="personalcenter_edit_data">Edit Profile</string>
    <string name="select_language">Select Language</string>
    <string name="bsmonitoring_medication_time">Time</string>
    <string name="login_confirm">Continue</string>
    <string name="personalcenter_your_target_range">Your Target</string>
    <string name="bsmonitoring_food_name">What did you eat?</string>
    <string name="personalcenter_reset_password">Reset Password</string>
    <string name="bsmonitoring_motion_type">What did you do?</string>
    <string name="personalcenter_language">Language</string>
    <string name="login_pwd_not_empty">Password can not be blank.</string>
    <string name="personalcenter_sensor_ends">SENSOR ENDS IN:</string>
    <string name="login_password_hint">Password</string>
    <string name="common_condition">Mood</string>
    <string name="personalcenter_input_unit_tips">Select the glucose unit you prefer.</string>
    <string name="login_password_incorrect">Incorrect password. Please try again.</string>
    <string name="personalcenter_email_address11">Email Address：</string>
    <string name="personalcenter_cancel_monitoring">Cancel Monitoring</string>
    <string name="dailybs_mon">Mon</string>
    <string name="login_get_verification_code_hint">Send Code</string>
    <string name="none_of_all">None of All</string>
    <string name="Alert">Alarm</string>
    <string name="dailybs_fri">Fri</string>
    <string name="login_input_account_hint">Account</string>
    <string name="Oct">Oct</string>
    <string name="personalcenter_clear_cache_tips">All local data will be cleared and cannot be recovered. Do you want to continue?</string>
    <string name="login_verification_code_hint">Please paste the code sent by email</string>
    <string name="bsmonitoring_glucose_trending">Glucose Trending</string>
    <string name="login_comfirm_email">Please enter the correct email address</string>
    <string name="personalcenter_follower_todo_tips">[%1$s] wants to share his/her glucose information with you.</string>
    <string name="personalcenter_setting">Settings</string>
    <string name="personalcenter_bs_remain">Remaining</string>
    <string name="food_name">Food Name</string>
    <string name="common_insulin">Insulin</string>
    <string name="mg_dl">mg/dL</string>
    <string name="personalcenter_my_sharer">My Sharer</string>
    <string name="login_input_new_password">You\'ve already set your password.</string>
    <string name="bsmonitoring_low">Low</string>
    <string name="login_pwd_less_than_eight">Make sure your password is at least 8 characters and contain at least 1 number, 1 letter, and 1 special character.</string>
    <string name="common_the_next_day">Next</string>
    <string name="dailybs_wed">Wed</string>
    <string name="login_input_email_hint">Enter Email</string>
    <string name="personalcenter_bs_last_update">Last Update</string>
    <string name="personalcenter_country">Country</string>
    <string name="dailytrendchart_module_title">AGP Report</string>
    <string name="Mar">Mar</string>
    <string name="personalcenter_ble_link_code">Sensor Code</string>
    <string name="May">May</string>
    <string name="dailytrendchart_agp_atlas">Ambulatory Glucose Profile</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_privacy_policy">Privacy Policy</string>
    <string name="personalcenter_invite_follower">Invite Follower</string>
    <string name="scan_connect_sensor">Connect Device</string>
    <string name="personalcenter_login_out">Log Out</string>
    <string name="launcher_personal_center">Profile</string>
    <string name="personalcenter_clear_cache">Clear All Data</string>
    <string name="personalcenter_use_type">Type of Diabetes</string>
    <string name="bsmonitoring_Extremely_low">Very Low</string>
    <string name="personalcenter_clock_in_events">Events</string>
    <string name="login_register">Create an Account</string>
    <string name="launcher_blood_sugar_monitoring">Monitoring</string>
    <string name="scan_connect_sensor_tips">Please scan the DM code on the packaging box.</string>
    <string name="dailybs_blood_glucose_target_range_time">Time in Range</string>
    <string name="done">Done</string>
    <string name="personalcenter_accept">Accept</string>
    <string name="personalcenter_ok">OK</string>
    <string name="tips">Tips</string>
    <string name="connect_a_device">Connect a Device</string>
    <string name="share_data_to_institution_tips_title">Share Your Data with a New Medical Institution</string>
    <string name="share_data_to_institution_tips_content">[%1$s] \nYou are invited to share all your glucose data. Once shared, your glucose data will be visible to the clinic. You can stop sharing with the clinic at any time.</string>
    <string name="decline">Decline</string>
    <string name="low_glucose_alarm">Low Glucose Alarm</string>
    <string name="permission_explain_location">To support the glucose data monitoring function of the sensor, the application requires the use of Bluetooth connectivity, which obtainings location information . To facilitate background operation of the app and the automatic reconnection feature for the blood glucose sensor\'s Bluetooth disconnection, it will still acquire location information data to enable the automatic connection of the blood glucose sensor, even if the application is closed or not in use.</string>
    <string name="help">Help</string>
    <string name="please_apply_a_new_sensor_first">Please apply a new sensor first.</string>
    <string name="step_1_how_to_apply_a_sensor">Step 1: How to apply a sensor</string>
    <string name="step_2_how_to_connect_the_app">Step 2: How to connect the app</string>
    <string name="step_3_start_connecting">Step 3: Start connecting</string>
    <string name="unable_to_receive_glucose_readings_from_your_sensor_please_check_the_connection">Unable to receive glucose readings from your sensor, please check the connection.</string>
</resources>