<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round10_white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_15"
        android:text="@string/share_data_to_institution_tips_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_15"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/share_data_to_institution_tips_content" />

    <TextView
        android:id="@+id/tv_refuse"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/personalcenter_search_country_bg"
        android:gravity="center"
        android:text="@string/decline"
        android:textColor="@color/color_666"
        app:layout_constraintEnd_toStartOf="@id/tv_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <TextView
        android:id="@+id/tv_accept"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/common_selector_continue_button_bg"
        android:gravity="center"
        android:text="@string/personalcenter_accept"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_refuse"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />


</androidx.constraintlayout.widget.ConstraintLayout>