<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_round8_white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_46"
        android:gravity="center"
        android:layout_marginEnd="@dimen/dp_15"
        android:text="@string/personalcenter_follower_todo_tips"
        android:textSize="@dimen/font_16"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_refuse"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/personalcenter_search_country_bg"
        android:gravity="center"
        android:text="@string/decline"
        android:textColor="@color/color_666"
        app:layout_constraintEnd_toStartOf="@id/tv_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <TextView
        android:id="@+id/tv_accept"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/common_selector_continue_button_bg"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/personalcenter_accept"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_refuse"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />



</androidx.constraintlayout.widget.ConstraintLayout>