<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/common_top_radius10_white">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:adjustViewBounds="true"
            android:src="@mipmap/monitoring_help_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/please_apply_a_new_sensor_first"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <Button
            android:id="@+id/connect_a_device"
            style="@style/button_theme_h45_r10"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_60"
            android:text="@string/connect_a_device"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="center"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/help"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/font_17"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_a_device" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
