<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/dp_14"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_round10_white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@null"
        android:padding="@dimen/dp_10"
        android:inputType="numberDecimal"
        android:maxLength="5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintTop_toBottomOf="@id/edt_input"
        android:background="@color/color_00D5B8"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintTop_toBottomOf="@id/edt_input"
        android:background="@color/color_cccccc"
        android:layout_marginTop="@dimen/dp_14"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_confirm"
        android:text="@string/common_cancel"
        android:gravity="center"
        android:padding="@dimen/dp_14"/>

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/tv_cancel"
        app:layout_constraintRight_toLeftOf="@id/tv_confirm"
        app:layout_constraintTop_toTopOf="@id/tv_cancel"
        app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
        android:background="@color/color_cccccc"/>
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_cancel"
        app:layout_constraintTop_toTopOf="@id/tv_cancel"
        android:text="@string/done"
        android:gravity="center"
        android:padding="@dimen/dp_14"/>
</androidx.constraintlayout.widget.ConstraintLayout>