<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.sisensing.common.entity.alarm.GlucoseAlarmDialogData" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_round10_white"
            android:paddingBottom="@dimen/dp_15">

            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/shape_glucose_alarm_high">

                <ImageView
                    android:id="@+id/title_icon"
                    android:layout_width="@dimen/dp_28"
                    android:layout_height="@dimen/dp_28"
                    android:layout_marginRight="@dimen/dp_8"
                    android:src="@mipmap/glucose_alarm_dialog_icon" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_17"
                    android:paddingBottom="@dimen/dp_17"
                    android:text='@{data.title}'
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_18"
                    tools:text="@string/low_glucose_alarm" />

            </LinearLayout>


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text='@{data.time}'
                android:textColor="@color/black"
                android:textSize="@dimen/font_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_container"
                tools:text="10:15" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/dp_4"
                android:text='@{data.content}'
                android:textColor="@color/black"
                android:textSize="@dimen/font_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time"
                tools:text="@string/unable_to_receive_glucose_readings_from_your_sensor_please_check_the_connection" />

            <Button
                android:id="@+id/ok"
                style="@style/button_theme_h45_r10"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/personalcenter_ok"
                app:layout_constraintTop_toBottomOf="@id/content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
